pod-security-vpol/baseline/restrict-sysctls/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01-new
spec:
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "0"
    - name: net.ipv4.ip_local_port_range
      value: "5000-6000"
    - name: net.ipv4.ip_unprivileged_port_start
      value: "60000"
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02-new
spec:
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03-new
spec:
  securityContext:
    sysctls:
    - name: net.ipv4.ping_group_range
      value: "1000-2000"
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04-new
spec:
  securityContext:
    sysctls:
    - name: net.ipv4.ip_local_reserved_ports
      value: "8080"
    - name: net.ipv4.tcp_keepalive_time
      value: "600"
    - name: net.ipv4.tcp_fin_timeout
      value: "30"
    - name: net.ipv4.tcp_keepalive_intvl
      value: "30"
    - name: net.ipv4.tcp_keepalive_probes
      value: "5"
    - name: net.ipv4.tcp_rmem
      value: "4096 87380 6291456"
    - name: net.ipv4.tcp_wmem
      value: "4096 16384 4194304"
    - name: net.ipv4.tcp_slow_start_after_idle
      value: "0"
    - name: net.ipv4.tcp_notsent_lowat
      value: "16384"
  containers:
  - name: busybox01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "2"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    sysctls:
    - name: net.ipv4.ip_local_port_range
      value: "31000    60999"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    sysctls:
    - name: net.ipv4.ip_unprivileged_port_start
      value: "2048"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    sysctls:
    - name: net.ipv4.tcp_syncookies
      value: "0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    sysctls:
    - name: net.ipv4.ping_group_range
      value: "1   0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
  - name: container01
    image: ghcr.io/kyverno/test-busybox:1.35
  securityContext:
    sysctls:
    - name: net.ipv4.ip_unprivileged_port_start
      value: "2048"
    - name: net.ipv4.ping_group_range
      value: "1   0"
---
